# ACIS-Python3

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FUNCTION_REFERENCE.md  IMPLEMENTATION.md  README.md
.github/: CONTRIBUTING.md
examples/: 01_generate_solid_block.py  02_boolean_subtract.py  03_sweeping.py  04_face_counting.py  README.md
python/: utilities.py
src/: acis_api.cpp  acis_api.h  acis_api2.cpp  acis_api2.h  acis_booleans.cpp  acis_booleans.h  acis_classes.cpp  acis_classes.h  acis_entity.cpp  acis_entity.h  acis_enums.cpp  acis_enums.h  acis_geometric_atoms.cpp  acis_geometric_atoms.h  acis_geometric_operators.cpp  acis_geometric_operators.h  acis_geometry.cpp  acis_geometry.h  acis_includes.h  acis_licensing.cpp  acis_lists.cpp  acis_lists.h  acis_modeler.cpp  acis_modeler.h  acis_operators.cpp  acis_operators.h  acis_query.cpp  acis_query.h  acis_saverestore.cpp  acis_saverestore.h  acis_spa.cpp  acis_spa.h  acis_sweeping.cpp  acis_sweeping.h  acis_topology.cpp  acis_topology.h  utilities.cpp  utilities.h
